hphp/hack/test/typecheck/tconst/subsume_tconst2.php.exp
File "subsume_tconst2.php", line 8, characters 14-14:
Unable to satisfy constraint on this type constant (Typing[4110])
File "subsume_tconst2.php", line 4, characters 28-35:
Expected arraykey
File "subsume_tconst2.php", line 8, characters 18-22:
But got mixed
